# AI-CDS-Disease-Diagnosis-Reproduction-Alpha

./: .gitignore  .system-design-visualization.md  ARCHITECTURE.md  FILE_DESCRIPTIONS.txt  README.md  pyproject.toml
.claude/: settings.local.json
Prediction_Output_BiomedBERT_15022026_12-03-36/: PerformanceIndex.txt
archive/: baseline_debug.txt  bert_debug.txt  conversation_with_LLM.txt  conversation_with_LLM_cleaned.txt  conversation_with_LLM_latex.tex
archive/cython_source/: util_cy.c
config/: environment.yml  requirements.txt  requirements_bert.txt
dashboard/: package-lock.json  package.json
dashboard/src/: App.tsx  index.css  types.ts
data/models/: README.md
docs/: James_wsl_code_setup.md  README.md  Reproduce_w_transformers.md  SETUP_GUIDE.md  bert_model_comparison.md
docs/Prediction_Output_Bio_ClinicalBERT_15022026_11-33-48/: PerformanceIndex.txt  timing_report.txt
docs/Prediction_Output_BiomedBERT_15022026_12-03-36/: timing_report.txt
docs/Prediction_Output_BlueBERT_15022026_12-24-38/: PerformanceIndex.txt  timing_report.txt
docs/score_distribution_analysis/: next_steps.md  score_distribution_summary.txt
scripts/: analyze_performance.py  analyze_score_distributions.py  build_dashboard_data.py  build_readme_plots.py  run_all_bert_models.py  run_baseline.py  run_bert_analysis.py  verify_setup.py
src/: __init__.py
src/bert/: __init__.py  eval.py  models.py
src/biosentvec/: __init__.py  embeddings.py  model.py
src/shared/: metrics.py  (+5 more)
tests/: test_bert_integration.py  test_bert_symptom_pairwise.py  test_reorganization.py  test_setup.py
(+42 files in other folders)
